[gd_scene load_steps=17 format=3 uid="uid://c1h6bgnucataf"]

[ext_resource type="PackedScene" uid="uid://oednu38gbmwd" path="res://prefabs/ground_tile_map.tscn" id="1_15xfq"]
[ext_resource type="PackedScene" uid="uid://cucwiwl6qyqsg" path="res://prefabs/PlayerCharacter.tscn" id="2_r8nl4"]
[ext_resource type="Texture2D" uid="uid://csnficd1k2yb1" path="res://sprites/Mushroom.png" id="3_0klxi"]
[ext_resource type="PackedScene" uid="uid://c1w0mc6qu256h" path="res://scenes/ui_canvas_layer.tscn" id="4_gk132"]
[ext_resource type="Script" path="res://scripts/crops_grid.gd" id="5_ggryu"]
[ext_resource type="Script" path="res://scripts/shop_keeper_character.gd" id="6_8lmio"]
[ext_resource type="PackedScene" uid="uid://bjssjw418p1ic" path="res://prefabs/player_sprite_animator.tscn" id="7_c5o5o"]
[ext_resource type="PackedScene" uid="uid://ds03x1hp3883r" path="res://prefabs/purchase_slot.tscn" id="8_ma02f"]
[ext_resource type="Texture2D" uid="uid://bn0vxmmg2f4uu" path="res://graphics/ui/speechbubble.png" id="9_d2fsl"]
[ext_resource type="Theme" uid="uid://d241x0ek7vt0u" path="res://fonts/theme.tres" id="11_irulp"]
[ext_resource type="AudioStream" uid="uid://dvjn3nwmud4w1" path="res://sounds/Hoe.wav" id="11_ymnet"]
[ext_resource type="Texture2D" uid="uid://bpg3sjv03n36o" path="res://textures/box.png" id="12_8boy5"]
[ext_resource type="Script" path="res://scripts/sales_bucket.gd" id="13_8cd8l"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lpgvw"]
texture = ExtResource("3_0klxi")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_wp1i0"]
sources/1 = SubResource("TileSetAtlasSource_lpgvw")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4nqrk"]

[node name="EntryPoint" type="Node2D"]
y_sort_enabled = true

[node name="GroundTileMap" parent="." instance=ExtResource("1_15xfq")]

[node name="PlayerCharacter" parent="." node_paths=PackedStringArray("fieldMap", "cropsGrid", "seedMap") instance=ExtResource("2_r8nl4")]
z_index = 10
texture_filter = 1
Money = 2000
speed = 60.0
fieldMap = NodePath("../GroundTileMap")
cropsGrid = NodePath("../CropsGrid")
seedMap = NodePath("../SeedTileMap")

[node name="SeedTileMap" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource("TileSet_wp1i0")
format = 2

[node name="MainCamera2D" type="Camera2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)

[node name="UICanvasLayer" parent="." instance=ExtResource("4_gk132")]

[node name="CropsGrid" type="Node2D" parent="."]
position = Vector2(32, -48)
script = ExtResource("5_ggryu")

[node name="ShopKeeperCharacter" type="Node2D" parent="."]
z_index = 10
position = Vector2(-284, -100)
script = ExtResource("6_8lmio")
StartPos = Vector2(-250, -100)
EndPos = Vector2(-150, -100)
Speed = 30.0
TimeForOpenShop = 5.0
TimeForClosedShop = 5.0

[node name="SpriteAnimator" parent="ShopKeeperCharacter" instance=ExtResource("7_c5o5o")]

[node name="PurchaseSlot1" parent="ShopKeeperCharacter" node_paths=PackedStringArray("audioPlayer") instance=ExtResource("8_ma02f")]
audioPlayer = NodePath("../../AudioStreamPlayer")

[node name="PurchaseSlot2" parent="ShopKeeperCharacter" node_paths=PackedStringArray("audioPlayer") instance=ExtResource("8_ma02f")]
position = Vector2(0, 24)
audioPlayer = NodePath("../../AudioStreamPlayer")

[node name="PurchaseSlot3" parent="ShopKeeperCharacter" node_paths=PackedStringArray("audioPlayer") instance=ExtResource("8_ma02f")]
position = Vector2(31, 24)
audioPlayer = NodePath("../../AudioStreamPlayer")

[node name="SpeechBubbleSprite2D" type="Sprite2D" parent="ShopKeeperCharacter"]
position = Vector2(11, -28)
texture = ExtResource("9_d2fsl")

[node name="Label" type="Label" parent="ShopKeeperCharacter/SpeechBubbleSprite2D"]
offset_left = -11.0
offset_top = -10.0
offset_right = 29.0
offset_bottom = 13.0
theme = ExtResource("11_irulp")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.701961, 0.701961, 0.701961, 1)
text = "Psst..."

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ymnet")

[node name="SalesBucket" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-90, 90)
texture = ExtResource("12_8boy5")
script = ExtResource("13_8cd8l")

[node name="Area2D" type="Area2D" parent="SalesBucket"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SalesBucket/Area2D"]
shape = SubResource("RectangleShape2D_4nqrk")

[node name="MoneyEarnedLabel" type="Label" parent="SalesBucket"]
z_index = 100
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_top = -21.0
offset_right = 12.0
offset_bottom = 2.0
grow_horizontal = 2
theme = ExtResource("11_irulp")
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "99$"
horizontal_alignment = 1

[connection signal="shop_item_selected" from="ShopKeeperCharacter/PurchaseSlot1" to="PlayerCharacter" method="_on_purchase_slot_1_shop_item_selected"]
[connection signal="shop_item_selected" from="ShopKeeperCharacter/PurchaseSlot2" to="PlayerCharacter" method="_on_purchase_slot_1_shop_item_selected"]
[connection signal="shop_item_selected" from="ShopKeeperCharacter/PurchaseSlot3" to="PlayerCharacter" method="_on_purchase_slot_1_shop_item_selected"]
[connection signal="area_shape_entered" from="SalesBucket/Area2D" to="SalesBucket" method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="SalesBucket/Area2D" to="SalesBucket" method="_on_area_2d_area_shape_exited"]
